nifi/k8s/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: nifi-http
  namespace: analytics
  labels:
    app: nifi  
spec:
#  type: LoadBalancer
  type: ClusterIP
#  type: NodePort
  selector:
    app: nifi
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      name: nifi

---

kind: Service
apiVersion: v1
metadata:
  name: nifi
  namespace: analytics
  labels:
    app: nifi
spec:
  type: ClusterIP
  selector:
    app: nifi
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
      name: nifi-listen-http
    - protocol: TCP
      port: 2881
      targetPort: 2881
      name: nifi-site-protocol
    - protocol: TCP
      port: 2882
      targetPort: 2882
      name: nifi-node-protocol
    - protocol: TCP
      port: 11443
      targetPort: 11443
      name: nifi-cluster-node-protocol
